[project]
name = "my-awesome-app"
version = "1.0.0"
description = "A Flower / PyTorch app with Tiny Bert"
dependencies = [
    "flwr[simulation]>=1.13.0",
    "flwr-datasets>=0.3.0",
    "transformers>=4.40.0",
    "datasets>=2.19.0",
    "peft>=0.11.0",
    "wandb>=0.17.0"
]

[tool.flwr.app]
publisher = "my-username"
name = "my-awesome-app"
version = "1.0.0"

[tool.flwr.app.components]
serverapp = "my_awesome_app.server:app"
clientapp = "my_awesome_app.client:app"

[tool.flwr.app.config]
num-server-rounds = 10
fraction-fit = 1.0
fraction-evaluate = 1.0
local-epochs = 10

[tool.flwr.federated-simulation]
num-partitions = 10

[tool.flwr.federated-simulation.resources]
num-cpus = 2
num-gpus = 1.0 

[tool.flwr.federated-simulation.options]
object-store-memory = 200000000 